--- a/src/MIP/MIP/MIP.csproj
+++ b/src/MIP/MIP/MIP.csproj
@@ -43,8 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cart.cs" />
+    <Compile Include="ExternalHarddisk.cs" />
+    <Compile Include="FlashStorage.cs" />
+    <Compile Include="Harddisk.cs" />
+    <Compile Include="InternalHarddisk.cs" />
+    <Compile Include="Manufacturer.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StorageUnit.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
