--- a/src/MIP/MIP/MIP.csproj
+++ b/src/MIP/MIP/MIP.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Harddrive.cs" />
     <Compile Include="InternalHarddrive.cs" />
     <Compile Include="Manufacturer.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
