--- a/src/MIP/MIP/MIP.csproj
+++ b/src/MIP/MIP/MIP.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Helpers\Strings.cs" />
     <Compile Include="InternalHarddrive.cs" />
     <Compile Include="Manufacturer.cs" />
+    <Compile Include="OrderLine.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Product.cs" />
