--- a/trunk/src/MIP/MIP/MIP.csproj
+++ b/trunk/src/MIP/MIP/MIP.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ERPM.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="StorageUnit.cs" />
+    <Compile Include="Toolbox.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
